--- a/package.json
+++ b/package.json
@@ -8,11 +8,12 @@
     "dev": "nodemon backend/server.js"
   },
   "dependencies": {
-    "express": "^4.18.2",
+    "body-parser": "^1.20.2",
+    "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
-    "googleapis": "^126.0.1",
-    "body-parser": "^1.20.2"
+    "express": "^4.18.2",
+    "googleapis": "^126.0.1"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
@@ -23,4 +24,3 @@
     ]
   }
 }
-
